--- a/blog/UI/Blog/src/routes/ArticleShow.less
+++ b/blog/UI/Blog/src/routes/ArticleShow.less
@@ -28,7 +28,7 @@
  */
  
 .bgImage {
-  background-image: url('https://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-431332.png');
+  background-image: url('https://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-162477.jpg');
   background-attachment: fixed;
   background-size: cover;
 }
