--- a/blog/UI/Blog-Management/src/layouts/LoginLayout.less
+++ b/blog/UI/Blog-Management/src/layouts/LoginLayout.less
@@ -1,7 +1,7 @@
 // 2018-1-09 Jifeng Cheng
 
 .bgimg {
-  background-image: url('https://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-542536.png');
+  background-image: url('https://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-521678.jpg');
   min-height: 100vh;
   background-size: cover;
 }
